new course website

--- a/courses/2020_Calc_1501B/index.html
+++ b/courses/2020_Calc_1501B/index.html
@@ -13,15 +13,9 @@
     <div class="section-wrapper">
       <div class="section">
         <h1 class="section-title">
-          CALC 1501B - Section 002 (Winter 2020)
+          Math 9052B / Math 4152B <br/><br/> Algebraic Topology (Winter 2020)
         </h1>
         <div class="section-body">
-          <!-- <div class="subsection">
-            <h3 class="subsection-title">Lecture Notes</h3>
-            <div class="subsection-body">
-              will be posted here.
-            </div>
-          </div> -->
           <div class="subsection">
             <h3 class="subsection-title">Essential information</h3>
             <div class="subsection-body">
@@ -38,115 +32,155 @@
                 </tr>
                 <tr>
                   <td>Lectures</td>
-                  <td>MTWTh 1230-1330, SEB 2200</td>
+                  <td>T 9:30-11:30 am, Th 9:30-10:30 am, SSC-3014</td>
                 </tr>
                 <tr>
                   <td>Office hours</td>
                   <td>
-                    MTWThF 1100-1200, online
-                    <!-- <br>
-                     MC 104 -->
+                    TBD
                   </td>
-                </tr>
-		            <tr>
-                  <td>Math Help Centre</td>
-                  <td>MTWThF 1430-1830, MC 15B</td>
                 </tr>
 		            <tr>
 		              <td>Textbook</td>
                   <td>
-                    <i>Single Variable Calculus: Early Transcendentals, 8th Edition</i>, by James Stewart (publ. Cengage/Brooks Cole)
+                    <i>Algebraic Topology</i>, by ​ Allen Hatcher​. Published by Cambridge University Press. ISBN 0-521-79540-0. The book is available online <a href="http://pi.math.cornell.edu/~hatcher/AT/ATpage.html">here</a>.
                   </td>
                 </tr>
-
                 <tr>
                   <td>
-                    Important Links
+                    Prerequisite
                   </td>
                   <td>
-                    <a href="https://owl.uwo.ca/portal/site/7f998425-220b-4234-88d9-3f76440a743b" target="_blank">Official Course Website</a>
-                    <br>
-                    <a href="https://owl.uwo.ca/access/content/group/7f998425-220b-4234-88d9-3f76440a743b/CALC-1501B-2020-Outline.pdf" target="_blank">Course Outline</a>
-                    <br>
-                    <a href="https://webwork1.stats.uwo.ca/webwork2/" target="_blank">WeBWoRK</a>
-                    <br>
-                    <a href="https://www.gradescope.com/" target="_blank">Gradescope</a>
+                    Group Theory (Math 3120) and General Topology (Math 3132 or Math 4121). <br/>
+                    Students are responsible for verifying that they have the correct prerequisites.
                   </td>
+                </tr>
+                <tr>
+                  <td>Course Websites</td>
+                  <td>OWL + Discord</td>
                 </tr>
               </table>
             </div>
           </div>
+
           <div class="subsection">
             <h3 class="subsection-title">Evaluation</h3>
             <div class="subsection-body">
               <table class="two-column-data">
                 <tr>
-                  <td align="center">5%</td>
-                  <td>Weekly Problem Sets x 9</td>
+                  <td align="center">20%</td>
+                  <td>Midterm</td>
                 </tr>
                 <tr>
-                  <td align="center">15%</td>
-                  <td>Homework x 3
-                    <br/><i>Tentative</i> deadlines:
-                    <ul>
-                      <li>
-                        HW#1: 2019/01/10–2019/01/24
-                      </li>
-                      <li>
-                        HW#2: 2019/02/14–2019/02/28
-                      </li>
-                      <li>
-                        HW#3: 2019/03/20–2019/04/03
-                      </li>
-                    </ul>
-                    </td>
+                  <td align="center">30%</td>
+                  <td>Final</td>
                 </tr>
                 <tr>
                   <td align="center">40%</td>
-                  <td>Midterm exam x 2
-                    <ul>
-                    <li>Friday February 7th 2020, 19h00 – 21h00</li>
-                    <li>Friday March 13th 2020, 19h00 – 21h00</li>
-                    </li>
-                  </td>
+                  <td>Homework</td>
                 </tr>
                 <tr>
-                  <td align="center">40%</td>
-                  <td>Final exam <br> TBA </td>
+                  <td align="center">10%</td>
+                  <td>Final paper </td>
                 </tr>
               </table>
             </div>
           </div>
+
           <div class="subsection">
-            <h3 class="subsection-title">Prerequisite</h3>
-            <div class="subsection-body">A minimum mark of 60% in either CALC 1000A/B or CALC 1500A/B.</div>
+            <h3 class="subsection-title">Mode of Delivery</h3>
+            <div class="subsection-body">
+              Depending on the circumstances, the classes will either be held in-person and streamed over Zoom or held online over Zoom. In either case, students will be able to attend all the classes remotely. 
+            </div>
           </div>
 
           <div class="subsection">
-            <h3 class="subsection-title">Antirequisite</h3>
-            <div class="subsection-body">CALC 1301A/B, Applied Mathematics 1413.
+            <h3 class="subsection-title">Technical Requirements</h3>
+            <div class="subsection-body">
+              Completion of this course will require you to have a reliable internet connection and a device that meets <a href="https://support.zoom.us/hc/en-us/articles/201362023-System-requirements-for-Windows-macOS-and-Linux">the system and technical requirements for Zoom</a>. 
+              <br /><br />
+
+              The midterm will tentatively be in class on the Tuesday in the first week of March (March 2).
+              Tests and examinations in this course will be conducted either in-person or on Zoom. There might also
+              be an oral component. Students are required to have some means of showing their work on Zoom e.g.
+              a tablet or a webcam.
             </div>
           </div>
+
+          <div class="subsection">
+            <h3 class="subsection-title">Academic Integrity</h3>
+            <div class="subsection-body">
+              Scholastic offenses are taken seriously and students are directed to read the appropriate policy, specifically, the definition of what constitutes a Scholastic Offence, <a href="http://www.uwo.ca/univsec/pdf/academic_policies/appeals/scholastic_discipline_undergrad.pdf">here</a>.
+              Students are allowed to discuss assignment problems, but each student should write their solutions separately. <b>Copying solutions from other students, online sources, textbooks, etc., or showing your work to other students constitutes a scholastic offense and will result in a grade of negative 100% for the component and in some cases expulsion from the program.</b> All academic offenses are added to your student record.
+            </div>
+          </div>
+
 
           <div class="subsection">
             <h3 class="subsection-title">Course Description</h3>
-            <div class="subsection-body">Students who intend to pursue a degree in Mathematics, Applied Mathematics, Statistics, Actuarial Sciences, Physics or  Astronomy should take this course. Techniques of integration; The Mean Value Theorem and its consequences; series, Taylor series with applications; parametric and polar curves with applications; first order linear and separable differential equations with applications.
+            <div class="subsection-body">
+              Algebraic topology is the study of topological spaces using tools of an algebraic nature, such as
+              homology groups, cohomology groups and homotopy groups. It is one of the major cornerstones of
+              mathematics and has applications to many areas of mathematics and to other fields, such as physics,
+              computer science, and logic. This is a first course in algebraic topology which will introduce the
+              invariants mentioned above, explain their basic properties and develop geometric intuition and
+              methods of computation.<br /> <br />
+
+              Here is a brief list topics covered in this course: Homotopy, fundamental group, Van Kampen's
+              theorem, covering spaces, simplicial and singular homology, homotopy invariance, long exact sequence
+              of a pair, excision, Mayer-Vietoris sequence, degree, Euler characteristic, cell complexes, projective
+              space. Time permitting we might talk about cohomology and homotopy. Applications include the
+              fundamental theorem of algebra, the Brouwer fixed point theorem, division algebras, and invariance of
+              domain.
             </div>
           </div>
 
-          <br />
-          <br />
-      <hr/>
-      <hr/>
-      <br />
-      <br />
-      <div class="subsection">
-        <figure>
-          <a target="_blank" href="https://abstrusegoose.com/230">
-            <img src="http://abstrusegoose.com/strips/it_is_obvious.png"  alt="abstrusegoose.com/230"/>
-          </a>
-        </figure>
-      </div>
+          <br/>
+          <br/>
+          <hr/>
+          <hr/>
+          <br/>
+          <br/>
+
+<h3><strong>Accommodation </strong><strong>P</strong><strong>ol</strong><strong>i</strong><strong>c</strong><strong>i</strong><strong>es</strong></h3>
+<p>Students with disabilities work with Accessible Education (formerly SSD) which provides recommendations for accommodation based on medical documentation or psychological and cognitive testing. The Academic Accommodation for Students with Disabilities policy can be found at:</p>
+<p><span><a href="https://www.uwo.ca/univsec/pdf/academic_policies/appeals/Academic%20Accommodation_disabilities.pdf">https://www.uwo.ca/univsec/pdf/academic_policies/appeals/Academic Accommodation_disabilities.pdf</a></span></p>
+<h3><strong>Academic Consideration for Student Absence</strong></h3>
+<p>Students will have up to two (2) opportunities during the regular academic year to use an on-line portal to self-report an absence during the semester, provided the following conditions are met: the absence is no more than 48 hours in duration, and the assessment for which consideration is being sought is worth 30% or less of the student&#8217;s final grade. Students are expected to contact their instructors within 24 hours of the end of the period of the self-reported absence, unless noted on the syllabus. Students are not able to use the self-reporting option in the following circumstances:</p>
+<ul class="squarelist">
+<li>for exams scheduled by the Office of the Registrar (e.g., December and April exams)</li>
+<li>absence of a duration greater than 48 hours,</li>
+<li>assessments worth more than 30% of the student&#8217;s final grade,</li>
+<li>if a student has already used the self-reporting portal twice during the academic year.</li>
+</ul>
+<p>If the conditions for a Self-Reported Absence are <em>not</em> met, students will need to provide a Student Medical Certificate if the absence is medical, or provide appropriate documentation if there are compassionate grounds for the absence in question. Students are encouraged to contact their Faculty academic counselling office to obtain more information about the relevant documentation.</p>
+<p>Students should also note that individual instructors are not permitted to receive documentation directly from a student, whether in support of an application for consideration on medical grounds, or for other reasons. <strong>All documentation required for absences that are not covered by the Self-Reported Absence Policy must be submitted to the Academic Counselling office of a student's Home Faculty.</strong>&#160;</p>
+<p>For policy on Academic Consideration for Student Absences - Undergraduate Students in First Entry Programs, see:</p>
+<p><span><a href="https://www.uwo.ca/univsec/pdf/academic_policies/appeals/Academic_Consideration_for_absences.pdf">https://www.uwo.ca/univsec/pdf/academic_policies/appeals/Academic_Consideration_for_absences.pdf</a></span></p>
+<p>and for the Student Medical Certificate (SMC), see:</p>
+<p><span><a href="http://www.uwo.ca/univsec/pdf/academic_policies/appeals/medicalform.pdf">http://www.uwo.ca/univsec/pdf/academic_policies/appeals/medicalform.pdf</a></span>&#160;</p>
+<h3>Religious Accommodation</h3>
+<p>Students should consult the University's list of recognized religious holidays, and should give reasonable notice in writing, prior to the holiday, to the Instructor and an Academic Counsellor if their course requirements will be affected by a religious observance. Additional information is given in the Western Multicultural Calendar:</p>
+<p><span><a href="https://multiculturalcalendar.com/ecal/index.php?s=c-univwo">https://multiculturalcalendar.com/ecal/index.php?s=c-univwo</a></span> &#160;</p>
+<p>You may also be eligible to write the Special Exam if you are in a &#8220;Multiple Exam Situation&#8221; (see <span><a href="http://www.registrar.uwo.ca/examinations/exam_schedule.html">http://www.registrar.uwo.ca/examinations/exam_schedule.html</a></span>).</p>
+<p>If a student fails to write a scheduled Special Examination, the date of the next Special Examination (if granted) normally will be the scheduled date for the final exam the next time this course is offered. The maximum course load for that term will be reduced by the credit of the course(s) for which the final examination has been deferred. See Academic Calendar for details (under <span><a href="https://www.westerncalendar.uwo.ca/PolicyPages.cfm?Command=showCategory&amp;PolicyCategoryID=5&amp;SelectedCalendar=Live&amp;ArchiveID=#SubHeading_70">Special Examinations</a></span>).</p>
+<h3>Academic Policies&#160;</h3>
+<p><span>The website for Registrarial Services </span>is <span><a href="http://www.registrar.uwo.ca">http://www.registrar.uwo.ca</a></span>.</p>
+<p>In accordance with policy, <span><a href="http://www.uwo.ca/its/identity/activatenonstudent.html">http://www.uwo.ca/its/identity/activatenonstudent.html</a></span>, the centrally administered e-mail account provided to students will be considered the individual&#8217;s official university e-mail address. It is the responsibility of the account holder to ensure that e-mail received from the University at his/her official university address is attended to in a timely manner.</p>
+<p>Participants in this course are not permitted to record the sessions, except where recording is an approved accommodation, or the participant has the prior written permission of the instructor.</p>
+<p>Scholastic offences are taken seriously and students are directed to read the appropriate policy, specifically, the definition of what constitutes a Scholastic Offence, at the following Web site:</p>
+<p><span><a href="http://www.uwo.ca/univsec/pdf/academic_policies/appeals/scholastic_discipline_undergrad.pdf">http://www.uwo.ca/univsec/pdf/academic_policies/appeals/scholastic_discipline_undergrad.pdf</a></span>.&#160;</p>
+<p>Completion of this course will require you to have a reliable internet connection and a device that meets the system requirements for Zoom. Information about the system requirements are available at the following link:</p>
+<p><span><a href="https://support.zoom.us/hc/en-us">https://support.zoom.us/hc/en-us</a></span></p>
+<p>Please note that Zoom servers are located outside Canada. If you would prefer to use only your first name or a nickname to login to Zoom, please provide this information to the instructor in advance of the test or examination.&#160;</p>
+<h3>Support Services</h3>
+<p>Please visit the Science &amp; Basic Medical Sciences Academic Counselling webpage for information on add/drop courses, academic considerations for absences, appeals, exam conflicts, and many other academic related matters:&#160; https://www.uwo.ca/sci/counselling/</p>
+<p>Please contact the course instructor if you require lecture or printed material in an alternate format or if any other arrangements can make this course more accessible to you. You may also wish to contact Student Accessibility Services (SAS) at (519) 661-2147 if you have any questions regarding accommodations.</p>
+<p>Western University is committed to a thriving campus as we deliver our courses in the mixed model of both virtual and face-to-face formats. We encourage you to check out the Digital Student Experience website to manage your academics and well-being: https://www.uwo.ca/se/digital/.</p>
+<p>Learning-skills counsellors at the Student Development Centre (http://www.sdc.uwo.ca) are ready to help you improve your learning skills. They offer presentations on strategies for improving time management, multiple-choice exam preparation/writing, textbook reading, and more. Individual support is offered throughout the Fall/Winter terms in the drop-in Learning Help Centre, and year-round through individual counselling.</p>
+<p>Students who are in emotional/mental distress should refer to Mental Health@Western (http://www.health.uwo.ca/mental_health) for a complete list of options about how to obtain help.</p>
+<p>Additional student-run support services are offered by the USC, http://westernusc.ca/services.</p>
+          
     </div>
   </div>
 </body>
