--- a/teaching-portfolio/index.html
+++ b/teaching-portfolio/index.html
@@ -130,7 +130,12 @@
 <p>I am a postdoc in the math department at the University of Western Ontario.</p>
 <p>I believe that higher education is a fundamental right and should be freely available to anyone who is willing to put in the time and the right kind of effort.
 Figuring out how to provide cheap, easily accessible, and yet high-quality education is one of my primary motivations for being in academia.</p>
-<p><img src="https://apurvanakade.github.io/images/me0.jpg" width="200px" class="left" /></p>
+<figure class="right">
+<a href="https://en.wikipedia.org/wiki/Don_Quixote_(Picasso)"><img src="https://upload.wikimedia.org/wikipedia/en/7/73/Don_Quixote_%281955%29_by_Pablo_Picasso.jpg" width="200px" /></a>
+<figcaption>
+Too much sanity may be madness<br/> and maddest of all: to see life as it is, <br/> and not as it should be!
+</figcaption>
+</figure>
 <p>We now have the technological tools that can make this possible.
 I’m very passionate about the use of technology in education.
 My computer engineering background puts me in a unique position to leverage these tools and use them to supplement (and not replace) math teachers everywhere. These can be used to create courses that can reach a much wider audience than was previously possible without comprising the quality of education.</p>
