--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta name="twitter:description" content="Personal Website." />
   
 
-<meta name="author" content="email: (left as an exercise to the reader)   Academic Info: CV, Research Statement (video), Teaching Portfolio" />
+<meta name="author" content="email: (left as an exercise to the reader)   Résumé: CV, Research Statement (video), Teaching Portfolio" />
 
 
 
@@ -31,7 +31,7 @@
   
   <link rel="shortcut icon" href="images/sisyphus.svg" type="image/x-icon" />
 
-<link rel="next" href="me-math-machine.html"/>
+<link rel="next" href="projects.html"/>
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
 <link href="libs/gitbook-2.6.7/css/plugin-table.css" rel="stylesheet" />
@@ -81,27 +81,19 @@
 
 <ul class="summary">
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Apurva Nakade</a></li>
-<li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html"><i class="fa fa-check"></i>Me, Math, Machine</a><ul>
-<li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html#learning-to-lean"><i class="fa fa-check"></i>Learning to Lean</a></li>
-<li class="chapter" data-level="" data-path="me-math-machine.html"><a href="me-math-machine.html#read-more"><i class="fa fa-check"></i>Read more</a></li>
+<li class="chapter" data-level="" data-path="projects.html"><a href="projects.html"><i class="fa fa-check"></i>Projects</a><ul>
+<li class="chapter" data-level="" data-path="projects.html"><a href="projects.html#teaching-projects"><i class="fa fa-check"></i>Teaching Projects</a></li>
+<li class="chapter" data-level="" data-path="projects.html"><a href="projects.html#research-projects"><i class="fa fa-check"></i>Research Projects</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="teaching-notes.html"><a href="teaching-notes.html"><i class="fa fa-check"></i>Teaching Notes</a><ul>
-<li class="chapter" data-level="" data-path="teaching-notes.html"><a href="teaching-notes.html#directed-reading-program"><i class="fa fa-check"></i>Directed Reading Program</a></li>
-<li class="chapter" data-level="" data-path="teaching-notes.html"><a href="teaching-notes.html#canadausa-mathcamp"><i class="fa fa-check"></i>Canada/USA Mathcamp</a></li>
-<li class="chapter" data-level="" data-path="teaching-notes.html"><a href="teaching-notes.html#johns-hopkins"><i class="fa fa-check"></i>Johns Hopkins</a></li>
-<li class="chapter" data-level="" data-path="teaching-notes.html"><a href="teaching-notes.html#expository-notes"><i class="fa fa-check"></i>Expository Notes</a></li>
+<li class="chapter" data-level="" data-path="notes.html"><a href="notes.html"><i class="fa fa-check"></i>Notes</a><ul>
+<li class="chapter" data-level="" data-path="notes.html"><a href="notes.html#mathcamp"><i class="fa fa-check"></i>Mathcamp</a></li>
+<li class="chapter" data-level="" data-path="notes.html"><a href="notes.html#jhu"><i class="fa fa-check"></i>JHU</a></li>
+<li class="chapter" data-level="" data-path="notes.html"><a href="notes.html#research"><i class="fa fa-check"></i>Research</a></li>
+<li class="chapter" data-level="" data-path="notes.html"><a href="notes.html#expository-notes"><i class="fa fa-check"></i>Expository Notes</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="research.html"><a href="research.html"><i class="fa fa-check"></i>Research</a><ul>
-<li class="chapter" data-level="" data-path="research.html"><a href="research.html#current-projects"><i class="fa fa-check"></i>Current Projects</a><ul>
-<li class="chapter" data-level="" data-path="research.html"><a href="research.html#groups-in-equivariant-elliptic-cohomology"><i class="fa fa-check"></i>2-groups in Equivariant Elliptic Cohomology</a></li>
-<li class="chapter" data-level="" data-path="research.html"><a href="research.html#groups-in-hott"><i class="fa fa-check"></i>2-groups in HoTT</a></li>
-<li class="chapter" data-level="" data-path="research.html"><a href="research.html#proof-formalization"><i class="fa fa-check"></i>Proof Formalization</a></li>
-</ul></li>
-<li class="chapter" data-level="" data-path="research.html"><a href="research.html#past-projects"><i class="fa fa-check"></i>Past Projects</a><ul>
-<li class="chapter" data-level="" data-path="research.html"><a href="research.html#an-application-of-the-h-principle-to-manifold-calculus."><i class="fa fa-check"></i>An application of the h-principle to Manifold Calculus.</a></li>
-<li class="chapter" data-level="" data-path="research.html"><a href="research.html#protein-folding-using-markov-chains"><i class="fa fa-check"></i>Protein folding using Markov chains</a></li>
-<li class="chapter" data-level="" data-path="research.html"><a href="research.html#projects-that-did-not-quite-work-out"><i class="fa fa-check"></i>Projects that did not quite work out</a></li>
-</ul></li>
+<li class="chapter" data-level="" data-path="teaching-dossier.html"><a href="teaching-dossier.html"><i class="fa fa-check"></i>Teaching Dossier</a><ul>
+<li class="chapter" data-level="" data-path="teaching-dossier.html"><a href="teaching-dossier.html#teaching-philosophy"><i class="fa fa-check"></i>Teaching Philosophy</a></li>
+<li class="chapter" data-level="" data-path="teaching-dossier.html"><a href="teaching-dossier.html#teaching-responsibilities"><i class="fa fa-check"></i>Teaching Responsibilities</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="etc-.html"><a href="etc-.html"><i class="fa fa-check"></i>Etc.</a></li>
 <li class="divider"></li>
@@ -126,17 +118,22 @@
             <section class="normal" id="section-">
 <div id="header">
 <h1 class="title">Apurva Nakade</h1>
-<p class="author"><em>email: <span onmouseover="this.innerHTML=&#39;alastname@uwo.ca&#39;" onmouseout="this.innerHTML=&#39;(left as an exercise to the reader)&#39;">(left as an exercise to the reader)</span> <br /> Academic Info: <a href="https://drive.google.com/file/d/1CZJ4_A2ssI0-V_HszcPoEJyQC1EY2s5u/view?usp=sharing">CV</a>, <a href="https://youtu.be/rlyzT1PWw5I">Research Statement (video)</a>, <a href="teaching-portfolio/">Teaching Portfolio</a></em></p>
+<p class="author"><em>email: <span onmouseover="this.innerHTML=&#39;alastname@uwo.ca&#39;" onmouseout="this.innerHTML=&#39;(left as an exercise to the reader)&#39;">(left as an exercise to the reader)</span> <br /> Résumé: <a href="https://drive.google.com/file/d/1CZJ4_A2ssI0-V_HszcPoEJyQC1EY2s5u/view?usp=sharing">CV</a>, <a href="https://youtu.be/rlyzT1PWw5I">Research Statement (video)</a>, <a href="teaching-portfolio/">Teaching Portfolio</a></em></p>
 </div>
 <div id="apurva-nakade" class="section level1">
 <h1>Apurva Nakade</h1>
+<p>
+ 
+</p>
 <p><img src="images/me0.jpg" width="200px" class="left" /></p>
+<p>
+ 
+</p>
 <p>I'm a postdoc at the <a href="http://www.math.uwo.ca/">University of Western Ontario</a> working with <a href="https://jdc.math.uwo.ca/">Dan Christensen</a> and <a href="http://www.math.uwo.ca/faculty/kapulkin/">Chris Kapulkin</a>.
-I do research in algebraic topology and homotopy theory.</p>
+My research is in the areas of algebraic topology and homotopy theory.</p>
 <p>In addition to research, I am very passionate about improving math education. I want to
-modernize math-ed and bring it to the 21st century through the use of new technological innovations
+modernize university math education and bring it to the 21st century through the use of new technological innovations
 in teaching and in the process make it more accessible and equitable.</p>
-<p>Things that keep me busy these days: teaching <a href="https://owl.uwo.ca/portal/site/5a31b856-d356-4278-9a3a-1dfebc96e873">Math 2151A (Discrete Math for Engineers)</a>, making <a href="https://www.youtube.com/playlist?list=PLXAOfwfSuiKm3cL-JftD9ndrjYi7fPcqN">video lectures</a>, organizing the <a href="https://www.math.uwo.ca/undergraduate/directed_reading_program.html">DRP</a>, applying for jobs.</p>
 
 </div>
             </section>
@@ -145,7 +142,7 @@ in teaching and in the process make it more accessible and equitable.</p>
         </div>
       </div>
 
-<a href="me-math-machine.html" class="navigation navigation-next navigation-unique" aria-label="Next page"><i class="fa fa-angle-right"></i></a>
+<a href="projects.html" class="navigation navigation-next navigation-unique" aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
@@ -196,20 +193,6 @@ gitbook.start({
 });
 </script>
 
-<!-- dynamically load mathjax for compatibility with self-contained -->
-<script>
-  (function () {
-    var script = document.createElement("script");
-    script.type = "text/javascript";
-    var src = "true";
-    if (src === "" || src === "true") src = "https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-MML-AM_CHTML";
-    if (location.protocol !== "file:")
-      if (/^https?:/.test(src))
-        src = src.replace(/^https?:/, '');
-    script.src = src;
-    document.getElementsByTagName("head")[0].appendChild(script);
-  })();
-</script>
 </body>
 
 </html>
