--- a/teaching-dossier.html
+++ b/teaching-dossier.html
@@ -140,8 +140,8 @@ I am constantly experimenting with my teaching and learning from my experiences.
 Every class is unique and presents its own set of goals and challenges.
 Every class is like a puzzle that I am trying to solve.
 I love the fact that there is no limit to how much you can improve your teaching.</p>
-<p>Finally, I’m interested in learning about research related to education.
-My background is in hard sciences so I’m skeptical about the validity of educational research but I’m hoping that this opinion will change once I read more about it in depth.</p>
+<!-- Finally, I'm interested in learning about research related to education. 
+My background is in hard sciences so I'm skeptical about the validity of educational research but I'm hoping that this opinion will change once I read more about it in depth. -->
 </div>
 <div id="teaching-responsibilities" class="section level2">
 <h2>Teaching Responsibilities</h2>
