--- a/etc-.html
+++ b/etc-.html
@@ -122,7 +122,7 @@
 <p>Fun for me is <a href="https://apurvanakade.github.io/blog/notes/books/">reading books</a>. I love to <a href="https://drive.google.com/open?id=1wpCR64gzKc7Zp8V-FIn43ANMA6QULjMS&amp;usp=sharing">travel</a>. I type in <a href="https://en.wikipedia.org/wiki/Dvorak_Simplified_Keyboard">dvorak</a>.
 I love designing websites like this one (built using <a href="https://bookdown.org/">bookdown</a>), <a href="https://github.com/apurvnakade/HugoTheme">my blog's theme</a>
 (built using <a href="https://gohugo.io/">Hugo</a>), and the <a href="http://www.math.jhu.edu/drp.html">JHU DRP website</a>.</p>
-<p>I maintain several blogs and wikis:</p>
+<p>I maintain a few blogs:</p>
 <ul>
 <li><a href="./blog">Personal blog</a></li>
 <li><a href="https://notleftasanexercise.wordpress.com/">Blog about teaching</a></li>
