--- a/etc-.html
+++ b/etc-.html
@@ -32,6 +32,7 @@
   <link rel="shortcut icon" href="images/sisyphus.svg" type="image/x-icon" />
 <link rel="prev" href="teaching-dossier.html"/>
 
+<script src="libs/header-attrs-2.3/header-attrs.js"></script>
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
 <link href="libs/gitbook-2.6.7/css/plugin-table.css" rel="stylesheet" />
@@ -81,17 +82,20 @@
 
 <ul class="summary">
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Apurva Nakade</a></li>
-<li class="chapter" data-level="" data-path="projects.html"><a href="projects.html"><i class="fa fa-check"></i>Projects</a><ul>
+<li class="chapter" data-level="" data-path="projects.html"><a href="projects.html"><i class="fa fa-check"></i>Projects</a>
+<ul>
 <li class="chapter" data-level="" data-path="projects.html"><a href="projects.html#teaching-projects"><i class="fa fa-check"></i>Teaching Projects</a></li>
 <li class="chapter" data-level="" data-path="projects.html"><a href="projects.html#research-projects"><i class="fa fa-check"></i>Research Projects</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="notes.html"><a href="notes.html"><i class="fa fa-check"></i>Notes</a><ul>
+<li class="chapter" data-level="" data-path="notes.html"><a href="notes.html"><i class="fa fa-check"></i>Notes</a>
+<ul>
 <li class="chapter" data-level="" data-path="notes.html"><a href="notes.html#mathcamp"><i class="fa fa-check"></i>Mathcamp</a></li>
 <li class="chapter" data-level="" data-path="notes.html"><a href="notes.html#jhu"><i class="fa fa-check"></i>JHU</a></li>
 <li class="chapter" data-level="" data-path="notes.html"><a href="notes.html#research"><i class="fa fa-check"></i>Research</a></li>
 <li class="chapter" data-level="" data-path="notes.html"><a href="notes.html#expository-notes"><i class="fa fa-check"></i>Expository Notes</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="teaching-dossier.html"><a href="teaching-dossier.html"><i class="fa fa-check"></i>Teaching Dossier</a><ul>
+<li class="chapter" data-level="" data-path="teaching-dossier.html"><a href="teaching-dossier.html"><i class="fa fa-check"></i>Teaching Dossier</a>
+<ul>
 <li class="chapter" data-level="" data-path="teaching-dossier.html"><a href="teaching-dossier.html#teaching-philosophy"><i class="fa fa-check"></i>Teaching Philosophy</a></li>
 <li class="chapter" data-level="" data-path="teaching-dossier.html"><a href="teaching-dossier.html#teaching-responsibilities"><i class="fa fa-check"></i>Teaching Responsibilities</a></li>
 </ul></li>
