--- a/teaching-dossier.html
+++ b/teaching-dossier.html
@@ -32,6 +32,7 @@
   <link rel="shortcut icon" href="images/sisyphus.svg" type="image/x-icon" />
 <link rel="prev" href="notes.html"/>
 <link rel="next" href="etc-.html"/>
+<script src="libs/header-attrs-2.3/header-attrs.js"></script>
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
 <link href="libs/gitbook-2.6.7/css/plugin-table.css" rel="stylesheet" />
@@ -81,17 +82,20 @@
 
 <ul class="summary">
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Apurva Nakade</a></li>
-<li class="chapter" data-level="" data-path="projects.html"><a href="projects.html"><i class="fa fa-check"></i>Projects</a><ul>
+<li class="chapter" data-level="" data-path="projects.html"><a href="projects.html"><i class="fa fa-check"></i>Projects</a>
+<ul>
 <li class="chapter" data-level="" data-path="projects.html"><a href="projects.html#teaching-projects"><i class="fa fa-check"></i>Teaching Projects</a></li>
 <li class="chapter" data-level="" data-path="projects.html"><a href="projects.html#research-projects"><i class="fa fa-check"></i>Research Projects</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="notes.html"><a href="notes.html"><i class="fa fa-check"></i>Notes</a><ul>
+<li class="chapter" data-level="" data-path="notes.html"><a href="notes.html"><i class="fa fa-check"></i>Notes</a>
+<ul>
 <li class="chapter" data-level="" data-path="notes.html"><a href="notes.html#mathcamp"><i class="fa fa-check"></i>Mathcamp</a></li>
 <li class="chapter" data-level="" data-path="notes.html"><a href="notes.html#jhu"><i class="fa fa-check"></i>JHU</a></li>
 <li class="chapter" data-level="" data-path="notes.html"><a href="notes.html#research"><i class="fa fa-check"></i>Research</a></li>
 <li class="chapter" data-level="" data-path="notes.html"><a href="notes.html#expository-notes"><i class="fa fa-check"></i>Expository Notes</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="teaching-dossier.html"><a href="teaching-dossier.html"><i class="fa fa-check"></i>Teaching Dossier</a><ul>
+<li class="chapter" data-level="" data-path="teaching-dossier.html"><a href="teaching-dossier.html"><i class="fa fa-check"></i>Teaching Dossier</a>
+<ul>
 <li class="chapter" data-level="" data-path="teaching-dossier.html"><a href="teaching-dossier.html#teaching-philosophy"><i class="fa fa-check"></i>Teaching Philosophy</a></li>
 <li class="chapter" data-level="" data-path="teaching-dossier.html"><a href="teaching-dossier.html#teaching-responsibilities"><i class="fa fa-check"></i>Teaching Responsibilities</a></li>
 </ul></li>
@@ -126,16 +130,16 @@
 Too much sanity may be madness<br/> and maddest of all: to see life as it is, <br/> and not as it should be!
 </figcaption>
 </figure>
-<p>I believe that my primary responsibility in any course is to teach students how to become good learners.
+<p>I believe that my primary responsibility is to teach students how to become good learners.
 Learning is a skill and like other skills it can be acquired through deliberate practice.
 Once you become good at learning you can pick up any subject by yourself.</p>
 <p>However, we do not fully understand how we learn.
 As such, I try to incorporate a variety of different techniques and methodologies in my classroom.
-I consider myself a coach and a facilitator and aim at providing a welcoming and supportive environment in my classes, and the rest is up to students.</p>
+I consider myself a coach and a facilitator and aim at providing a welcoming and supportive environment in my classes, and the rest is up to the students.</p>
 <p>Learning is also a habit that can only be developed over time.
-It requires a lot of observation and introspection on the part of the both student and the teacher is not something that can be rushed.
+It requires a lot of observation and introspection on the part of both the student and the teacher and is not something that can be rushed.
 I practice a lot of patience and mindfulness in my teaching.</p>
-<p>I teach because it’s fun.
+<p>Finally, I teach because it’s fun.
 I am constantly experimenting with my teaching and learning from my experiences.
 Every class is unique and presents its own set of goals and challenges.
 Every class is like a puzzle that I am trying to solve.
