--- a/projects.html
+++ b/projects.html
@@ -32,6 +32,7 @@
   <link rel="shortcut icon" href="images/sisyphus.svg" type="image/x-icon" />
 <link rel="prev" href="index.html"/>
 <link rel="next" href="notes.html"/>
+<script src="libs/header-attrs-2.3/header-attrs.js"></script>
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
 <link href="libs/gitbook-2.6.7/css/plugin-table.css" rel="stylesheet" />
@@ -81,17 +82,20 @@
 
 <ul class="summary">
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Apurva Nakade</a></li>
-<li class="chapter" data-level="" data-path="projects.html"><a href="projects.html"><i class="fa fa-check"></i>Projects</a><ul>
+<li class="chapter" data-level="" data-path="projects.html"><a href="projects.html"><i class="fa fa-check"></i>Projects</a>
+<ul>
 <li class="chapter" data-level="" data-path="projects.html"><a href="projects.html#teaching-projects"><i class="fa fa-check"></i>Teaching Projects</a></li>
 <li class="chapter" data-level="" data-path="projects.html"><a href="projects.html#research-projects"><i class="fa fa-check"></i>Research Projects</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="notes.html"><a href="notes.html"><i class="fa fa-check"></i>Notes</a><ul>
+<li class="chapter" data-level="" data-path="notes.html"><a href="notes.html"><i class="fa fa-check"></i>Notes</a>
+<ul>
 <li class="chapter" data-level="" data-path="notes.html"><a href="notes.html#mathcamp"><i class="fa fa-check"></i>Mathcamp</a></li>
 <li class="chapter" data-level="" data-path="notes.html"><a href="notes.html#jhu"><i class="fa fa-check"></i>JHU</a></li>
 <li class="chapter" data-level="" data-path="notes.html"><a href="notes.html#research"><i class="fa fa-check"></i>Research</a></li>
 <li class="chapter" data-level="" data-path="notes.html"><a href="notes.html#expository-notes"><i class="fa fa-check"></i>Expository Notes</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="teaching-dossier.html"><a href="teaching-dossier.html"><i class="fa fa-check"></i>Teaching Dossier</a><ul>
+<li class="chapter" data-level="" data-path="teaching-dossier.html"><a href="teaching-dossier.html"><i class="fa fa-check"></i>Teaching Dossier</a>
+<ul>
 <li class="chapter" data-level="" data-path="teaching-dossier.html"><a href="teaching-dossier.html#teaching-philosophy"><i class="fa fa-check"></i>Teaching Philosophy</a></li>
 <li class="chapter" data-level="" data-path="teaching-dossier.html"><a href="teaching-dossier.html#teaching-responsibilities"><i class="fa fa-check"></i>Teaching Responsibilities</a></li>
 </ul></li>
@@ -126,11 +130,11 @@
 <h2>Teaching Projects</h2>
 <ul>
 <li><p><strong>Directed Reading Program</strong></p>
-The Directed Reading Program is a program for undergrads and grad students/postdocs.
+<p>The Directed Reading Program is a program for undergrads and grad students/postdocs.
 Undergrads are paired with a mentor whose interests align with theirs and they study a topic of their choice for one semester.
 It is intended to help motivated students explore topics in more depth than possible in a classroom setting.
 I co-organize the <a href="https://www.math.uwo.ca/undergraduate/directed_reading_program.html">DRP at UWO</a> and in the past have co-organized the <a href="http://www.math.jhu.edu/drp.html">DRP at JHU</a>.
-Following is the list of projects I’ve mentored.
+Following is the list of projects I’ve mentored.</p>
 <ul>
 <li>Jacob Fabe, <em>Fundamental Group</em> from Topology by Munkres (<a href="https://www.math.uwo.ca/undergraduate/directed_reading_program.html">DRP, Fall
 2020</a>)</li>
@@ -149,9 +153,9 @@ Spring 2018</a>)</li>
 This involved making <a href="https://www.youtube.com/playlist?list=PLXAOfwfSuiKm3cL-JftD9ndrjYi7fPcqN">youtube videos</a>, making and editing <a href="https://webwork.maa.org/">WeBWorK</a> problem sets, managing discussion forums, other standard course related chores, and not going insane.
 I occasionally write about it on my <a href="https://notleftasanexercise.wordpress.com/category/discrete-math/">my wordpress blog</a>.</p></li>
 <li><p><strong>Canada/USA Mathcamp</strong></p>
-Canada/USA Mathcamp is a summer camp for mathematically talented students ages 13‑18 from all over the world.
+<p>Canada/USA Mathcamp is a summer camp for mathematically talented students ages 13‑18 from all over the world.
 Among other things, I have been designing and teaching some fun courses there.
-Notes for my courses can be found <a href="notes.html#notes">here</a>. I’ve also supervised the following reading projects:
+Notes for my courses can be found <a href="notes.html#notes">here</a>. I’ve also supervised the following reading projects:</p>
 <ul>
 <li>Daniel Koizumi, <a href="https://drive.google.com/file/d/1bv-dCvd4nwfD68RxDeuDFoJ3dZIOoqPq/view">Riemann Surfaces</a> from <em>Algebraic Curves and Riemann Surfaces</em> by Rick Miranda.</li>
 <li>Kenji, Dedekind Domains in Lean and Michael, Konigsberg Bridge Problem in Lean (<a href="https://github.com/apurvnakade/mc2020-projects">code</a>).</li>
