fix errors in titles

--- a/courses/2021_Alg_Top/index.html
+++ b/courses/2021_Alg_Top/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
-  <title>CALC 1501B - Winter 2020 UWO </title>
+  <title>Math 9052B / Math 4152B - Winter 2021 UWO </title>
 </head>
 
 <body>
@@ -13,7 +13,7 @@
     <div class="section-wrapper">
       <div class="section">
         <h1 class="section-title">
-          Math 9052B / Math 4152B <br/><br/> Algebraic Topology (Winter 2020)
+          Math 9052B / Math 4152B <br/><br/> Algebraic Topology (Winter 2021)
         </h1>
         <div class="section-body">
           <div class="subsection">
@@ -90,7 +90,7 @@
           <div class="subsection">
             <h3 class="subsection-title">Mode of Delivery</h3>
             <div class="subsection-body">
-              Depending on the circumstances, the classes will either be held in-person and streamed over Zoom or held online over Zoom. In either case, students will be able to attend all the classes remotely. 
+              The classes will be held online over Zoom.  Students are required to attend the lectures under their full legal name and to have their webcams on. If a student is unable to do so, they must obtain prior written permission of the instructor.
             </div>
           </div>
 
