--- a/courses/2021_Alg_Top/index.html
+++ b/courses/2021_Alg_Top/index.html
@@ -32,12 +32,12 @@
                 </tr>
                 <tr>
                   <td>Lectures</td>
-                  <td>T 9:30-11:30 am, Th 9:30-10:30 am, SSC-3014</td>
+                  <td>T 9:30-11:30 am, Th 9:30-10:30 am, on Zoom (Meeting ID: 947 1739 6649)</td>
                 </tr>
                 <tr>
                   <td>Office hours</td>
                   <td>
-                    TBD
+                    M 2:00 - 4:00 pm on Zoom + any (reasonable) time on Discord
                   </td>
                 </tr>
 		            <tr>
