--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta name="twitter:description" content="Personal Website." />
   
 
-<meta name="author" content="email: (left as an exercise to the reader), CV" />
+<meta name="author" content="CV, email: (left as an exercise to the reader)" />
 
 
 
@@ -119,7 +119,7 @@
             <section class="normal" id="section-">
 <div id="header">
 <h1 class="title">Apurva Nakade</h1>
-<p class="author"><em>email: <span onmouseover="this.innerHTML=&#39;alastname@uwo.ca&#39;" onmouseout="this.innerHTML=&#39;(left as an exercise to the reader)&#39;">(left as an exercise to the reader)</span>, <a href="https://drive.google.com/file/d/1gjjdAYYkMuSBC6xEMi96PKej3IxA25VC/view?usp=sharing">CV</a> <br /></em></p>
+<p class="author"><em><a href="https://drive.google.com/file/d/1gjjdAYYkMuSBC6xEMi96PKej3IxA25VC/view?usp=sharing">CV</a>, email: <span onmouseover="this.innerHTML=&#39;alastname@uwo.ca&#39;" onmouseout="this.innerHTML=&#39;(left as an exercise to the reader)&#39;">(left as an exercise to the reader)</span> <br /></em></p>
 </div>
 <div id="apurva-nakade" class="section level1">
 <h1>Apurva Nakade</h1>
