--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
   <meta name="twitter:description" content="Personal Website." />
   
 
-<meta name="author" content="email: (left as an exercise to the reader), CV" />
+<meta name="author" content="CV, email: (left as an exercise to the reader)" />
 
 
 
