--- a/courses/2021_Alg_Top/index.html
+++ b/courses/2021_Alg_Top/index.html
@@ -68,15 +68,11 @@
             <div class="subsection-body">
               <table class="two-column-data">
                 <tr>
-                  <td align="center">20%</td>
-                  <td>Midterm</td>
-                </tr>
-                <tr>
                   <td align="center">30%</td>
                   <td>Final</td>
                 </tr>
                 <tr>
-                  <td align="center">40%</td>
+                  <td align="center">60%</td>
                   <td>Homework</td>
                 </tr>
                 <tr>
@@ -98,10 +94,7 @@
             <h3 class="subsection-title">Technical Requirements</h3>
             <div class="subsection-body">
               Completion of this course will require you to have a reliable internet connection and a device that meets <a href="https://support.zoom.us/hc/en-us/articles/201362023-System-requirements-for-Windows-macOS-and-Linux">the system and technical requirements for Zoom</a>. 
-              <br /><br />
-
-              The midterm will tentatively be in class on the Tuesday in the first week of March (March 2).
-              Tests and examinations in this course will be conducted either in-person or on Zoom. There might also
+               ests and examinations in this course will be conducted either in-person or on Zoom. There might also
               be an oral component. Students are required to have some means of showing their work on Zoom e.g.
               a tablet or a webcam.
             </div>
